some more stuff

--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -2,10 +2,12 @@
 
 <html>
     <head>
-        
+        <link rel="stylesheet" href="/practiceWebsite/styles/styles.css">
     </head>
 
     <body>
-
+        <a href="home.html">
+            <button class="button1">Home</button>
+        </a>
     </body>
 </html>
