--- a/pages/home.html
+++ b/pages/home.html
@@ -4,7 +4,8 @@
 <html>
     <head>
         <title>Article</title>
-        <link rel="stylesheet" href="styles/styles.css">
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="/practiceWebsite/styles/styles.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
